Added property constituencyPartyName in Member of Parliament model, right now entity property is unmapped to db
