# src/Dfe.PersonsApi.Application/MappingProfiles/ConstituencyProfile.cs
@@ -18,7 +18,8 @@ namespace Dfe.PersonsApi.Application.MappingProfiles
                 .ForMember(dest => dest.Roles, opt => opt.MapFrom(src => new List<string> { "Member of Parliament" }))
                 .ForMember(dest => dest.UpdatedAt, opt => opt.MapFrom(src => src.LastRefresh))
                 .ForMember(dest => dest.Phone, opt => opt.MapFrom(src => src.MemberContactDetails.Phone))
-                .ForMember(dest => dest.ConstituencyName, opt => opt.MapFrom(src => src.ConstituencyName));
+                .ForMember(dest => dest.ConstituencyName, opt => opt.MapFrom(src => src.ConstituencyName))
+                .ForMember(dest => dest.ConstituencyPartyName, opt => opt.MapFrom(src => src.ConstituencyPartyName));
         }
     }
 }
