# src/GovUK.Dfe.PersonsApi.Client/Generated/swagger.json
@@ -215,6 +215,10 @@
             "properties": {
               "constituencyName": {
                 "type": "string"
+              },
+              "constituencyPartyName": {
+                "type": "string",
+                "nullable": true
               }
             }
           }
